--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,16 +16,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/regulationsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textAlignment="center"
-                android:text="By logging in you accept our Terms and Privacy Policy."
                 android:paddingBottom="15sp"
-                android:textSize="12sp"
-                />
+                android:text="By logging in you accept our Terms and Privacy Policy."
+                android:textAlignment="center"
+                android:textSize="12sp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -117,14 +118,11 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="200sp"
-                    android:src="@drawable/login_photo"
-                    android:layout_weight="0"
                     android:layout_gravity="bottom|center"
+                    android:layout_weight="0"
                     android:paddingTop="20sp"
-                    />
+                    android:src="@drawable/login_photo" />
             </LinearLayout>
-
-
         </LinearLayout>
 
         <LinearLayout
