--- a/app/src/main/res/layout/activity_matches.xml
+++ b/app/src/main/res/layout/activity_matches.xml
@@ -9,15 +9,14 @@
         android:layout_width="100sp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-
         android:padding="5sp">
 
         <Button
-    android:id="@+id/back"
-    android:layout_width="0sp"
-    android:layout_height="0sp"
-    android:onClick="onBack"
-    android:text="Back!" />
+            android:id="@+id/back"
+            android:layout_width="0sp"
+            android:layout_height="0sp"
+            android:onClick="onBack"
+            android:text="Back!" />
 
         <ImageView
             android:id="@+id/locationButton"
@@ -42,7 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-
     </LinearLayout>
 
     <LinearLayout
@@ -55,10 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10sp"
-            android:text="#all "
-            android:textSize="25sp"
-
-            />
+            android:text="#all"
+            android:textSize="25sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,12 +72,7 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:scrollbars="vertical">
-
-            </androidx.recyclerview.widget.RecyclerView>
-
+                android:scrollbars="vertical"/>
         </androidx.core.widget.NestedScrollView>
     </LinearLayout>
-
 </LinearLayout>
