--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -11,7 +11,6 @@
         android:orientation="vertical"
         tools:context="com.pinder.app.UsersProfilesActivity">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -28,37 +27,37 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingBottom="10sp"
-            android:paddingRight="10sp"
             android:paddingLeft="10sp"
-            android:paddingTop="5sp">
-
+            android:paddingTop="5sp"
+            android:paddingRight="10sp"
+            android:paddingBottom="10sp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/nameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/nameTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
-                android:textColor="@android:color/black"
-                android:textSize="30sp"
-                android:layout_weight="1"
-                tools:text="name" />
+                    android:layout_weight="1"
+                    android:textColor="@android:color/black"
+                    android:textSize="30sp"
+                    tools:text="name" />
 
                 <ImageView
                     android:id="@+id/reportUserImage"
                     android:layout_width="30sp"
                     android:layout_height="30sp"
-                    android:layout_marginRight="5sp"
                     android:layout_gravity="end|center_vertical"
+                    android:layout_marginRight="5sp"
                     android:layout_weight="0"
                     android:src="@drawable/report_user_icon" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -70,6 +69,7 @@
                     android:layout_height="27sp"
                     android:layout_marginRight="5sp"
                     android:src="@drawable/user_profile_location" />
+
                 <TextView
                     android:id="@+id/locationTextView"
                     android:layout_width="wrap_content"
@@ -77,6 +77,7 @@
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     tools:text="location" />
+
                 <TextView
                     android:id="@+id/distanceTextView"
                     android:layout_width="wrap_content"
@@ -86,23 +87,26 @@
                     tools:text="distance:" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/genderimage"
                     android:layout_width="20sp"
                     android:layout_height="27sp"
                     android:layout_marginRight="5sp"
                     android:src="@drawable/user_profile_gender" />
-            <TextView
-                android:id="@+id/genderTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="gender" />
+
+                <TextView
+                    android:id="@+id/genderTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    tools:text="gender" />
             </LinearLayout>
 
             <LinearLayout
@@ -118,12 +122,12 @@
                     android:src="@drawable/user_profile_tags" />
 
                 <TextView
-                android:id="@+id/tagsTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="Mutual tags" />
+                    android:id="@+id/tagsTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    tools:text="Mutual tags" />
             </LinearLayout>
 
             <View
@@ -132,6 +136,7 @@
                 android:layout_marginTop="10sp"
                 android:layout_marginBottom="10sp"
                 android:background="#EEEAEAEA" />
+
             <TextView
                 android:id="@+id/descriptionTextView"
                 android:layout_width="wrap_content"
