--- a/app/src/main/res/layout/dialog_privacy.xml
+++ b/app/src/main/res/layout/dialog_privacy.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="1000sp"
+    android:orientation="vertical"
     android:paddingTop="10sp">
 
     <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="10sp">
-
-
-
 
         <TextView
             android:id="@+id/privacyTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="policy"
-            />
-
+            android:text="policy" />
 
     </LinearLayout>
-    </ScrollView>
+</ScrollView>
