--- a/app/src/main/res/layout/dialog_terms.xml
+++ b/app/src/main/res/layout/dialog_terms.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="1000sp"
+    android:orientation="vertical"
     android:paddingTop="10sp">
 
     <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="10sp">
 
@@ -15,8 +16,7 @@
             android:id="@+id/termsTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Terms and Conditions"
-            />
+            android:text="Terms and Conditions" />
 
     </LinearLayout>
-    </ScrollView>
+</ScrollView>
