--- a/app/src/main/res/layout/item_tags_popular.xml
+++ b/app/src/main/res/layout/item_tags_popular.xml
@@ -4,31 +4,34 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <TextView
-        android:id="@+id/tag_name"
-        android:layout_width="wrap_content"
-        android:layout_height="30sp"
-        android:text="Item1"
-        android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/tag_popularity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="right"
-        android:text="10000"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/tag_name"
+            android:layout_width="wrap_content"
+            android:layout_height="30sp"
+            android:text="Item1"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tag_popularity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="10000"
+            android:textSize="20sp" />
     </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#EEEAEAEA"
-            android:layout_weight="0"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_weight="0"
+        android:background="#EEEAEAEA" />
 </LinearLayout>
 
 
