--- a/app/src/main/res/layout/layout_report_dialog.xml
+++ b/app/src/main/res/layout/layout_report_dialog.xml
@@ -3,16 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="20sp"
-    android:paddingRight="20sp"
-    >
-
-
+    android:paddingRight="20sp">
 
     <EditText
         android:id="@+id/report_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Report reason"
-        />
+        android:hint="Report reason" />
 
 </RelativeLayout>
