--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -159,13 +159,13 @@
                 android:layout_marginLeft="100sp"
                 android:layout_marginRight="100sp"
                 android:background="@drawable/rounded_button"
+                android:visibility="invisible"
                 android:text="unmatch" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-
                 android:paddingBottom="10sp">
 
                 <ImageView
@@ -175,6 +175,7 @@
                     android:layout_weight="1"
                     android:paddingLeft="50sp"
                     android:src="@drawable/dislike"
+                    android:visibility="invisible"
                     android:text="DISLIKE" />
 
                 <ImageView
@@ -184,6 +185,7 @@
                     android:layout_weight="1"
                     android:paddingRight="50sp"
                     android:src="@drawable/like"
+                    android:visibility="invisible"
                     android:text="LIKE" />
 
             </LinearLayout>
