--- a/app/src/main/res/layout/activity_main_fragment_menager.xml
+++ b/app/src/main/res/layout/activity_main_fragment_menager.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fooFragment"
-        android:name="com.pinder.app.Matches.MatchesFragment"
+        android:name="com.pinder.app.MainActivityFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
