Delete user functions fixed with RxJava

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context="com.pinder.app.ProfileActivity">
+        tools:context="com.pinder.app.PrfileFragment">
 
         <Button
             android:id="@+id/back"
