--- a/app/src/main/res/layout/activity_main_fragment_menager.xml
+++ b/app/src/main/res/layout/activity_main_fragment_menager.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pinder.app.MainFragmentMenager">
+    tools:context="com.pinder.app.MainFragmentMenager"
+    android:orientation="vertical">
+
 
     <fragment
         android:id="@+id/fooFragment"
         android:name="com.pinder.app.MainActivityFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
