Fixed settins view

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -111,44 +111,6 @@
             android:gravity="center|bottom"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:gravity="left"
-                android:paddingBottom="10sp"
-                android:text="Legal information:"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/privacyPolicyButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="Privacy policy" />
-
-            <Button
-                android:id="@+id/termsButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="Terms &amp; Conditinons" />
-
-            <Button
-                android:id="@+id/licenceButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="Licence" />
 
             <ImageView
                 android:id="@+id/tags"
@@ -165,6 +127,45 @@
                 android:gravity="top"
                 android:paddingBottom="20sp"
                 android:text="Version: 1.0" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <Button
+                    android:id="@+id/privacyPolicyButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5sp"
+                    android:background="@android:color/transparent"
+                    android:paddingLeft="10sp"
+                    android:paddingRight="10sp"
+                    android:textSize="12sp"
+                    android:text="Privacy policy" />
+
+                <Button
+                    android:id="@+id/termsButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5sp"
+                    android:background="@android:color/transparent"
+                    android:paddingLeft="10sp"
+                    android:paddingRight="10sp"
+                    android:textSize="12sp"
+                    android:text="Terms &amp; Conditinons" />
+
+                <Button
+                    android:id="@+id/licenceButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20sp"
+                    android:background="@android:color/transparent"
+                    android:paddingLeft="10sp"
+                    android:paddingRight="10sp"
+                    android:textSize="12sp"
+                    android:text="Licence" />
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
