--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -72,8 +72,8 @@
 
             <Button
                 android:id="@+id/restartMatches"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0sp"
+                android:layout_height="0sp"
                 android:layout_gravity="center|bottom"
                 android:layout_marginBottom="10sp"
                 android:background="@drawable/rounded_button"
@@ -97,11 +97,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|bottom"
-                android:layout_marginBottom="50sp"
+                android:layout_marginBottom="20sp"
                 android:background="@drawable/rounded_button"
                 android:paddingLeft="10sp"
                 android:paddingRight="10sp"
                 android:text="Delete account" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:text="Want to report bug or advise improvement?"
+                android:paddingBottom="5sp"/>
+            <Button
+                android:id="@+id/bugs_improvement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="50sp"
+                android:background="@drawable/rounded_button"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
+                android:text="Bugs / Improvement" />
         </LinearLayout>
 
         <LinearLayout
@@ -126,7 +143,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="top"
                 android:paddingBottom="20sp"
-                android:text="Version: 1.0" />
+                android:text="Beta Version: 1.1" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
