Added android jetpack, updating navigation

--- a/app/src/main/res/layout/activity_main_fragment_menager.xml
+++ b/app/src/main/res/layout/activity_main_fragment_menager.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.pinder.app.MainFragmentMenager"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fillViewport="true">
 
+    <!--     <androidx.viewpager2.widget.ViewPager2
+           android:id="@+id/viewPager"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+       </androidx.viewpager2.widget.ViewPager2>-->
 
     <fragment
-        android:id="@+id/fooFragment"
-        android:name="com.pinder.app.MainActivityFragment"
+        android:id="@+id/main_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph = "@navigation/navigation"
+        app:defaultNavHost = "false"/>
+
+
+    <!--      <fragment
+          android:id="@+id/profile_fragment"
+          android:name="com.pinder.app.ProfileFragment"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />-->
+
+</LinearLayout>
