--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -7,52 +7,52 @@
     android:orientation="vertical"
     tools:context="com.pinder.app.MainFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:orientation="horizontal"
-        android:paddingTop="10sp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50sp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:paddingTop="10sp">-->
 
-        <Button
-            android:id="@+id/back"
-            android:layout_width="0sp"
-            android:layout_height="0sp"
-            android:onClick="onBack"
-            android:text="Back!" />
+<!--        <Button-->
+<!--            android:id="@+id/back"-->
+<!--            android:layout_width="0sp"-->
+<!--            android:layout_height="0sp"-->
+<!--            android:onClick="onBack"-->
+<!--            android:text="Back!" />-->
 
-        <ImageView
-            android:id="@+id/settings"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/settings"
-            android:text="Settings" />
+<!--        <ImageView-->
+<!--            android:id="@+id/settings"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/settings"-->
+<!--            android:text="Settings" />-->
 
-        <ImageView
-            android:id="@+id/tags"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="goToTags"
-            android:src="@drawable/tags"
-            android:text="Tags" />
+<!--        <ImageView-->
+<!--            android:id="@+id/tags"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:onClick="goToTags"-->
+<!--            android:src="@drawable/tags"-->
+<!--            android:text="Tags" />-->
 
-        <ImageView
-            android:id="@+id/matches"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/matches"
-            android:text="Matches" />
+<!--        <ImageView-->
+<!--            android:id="@+id/matches"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/matches"-->
+<!--            android:text="Matches" />-->
 
-        <ImageView
-            android:id="@+id/profile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/profile"
-            android:text="Profle" />
-    </LinearLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/profile"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/profile"-->
+<!--            android:text="Profle" />-->
+<!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
