--- a/app/src/main/res/layout/fragment_tags_manager.xml
+++ b/app/src/main/res/layout/fragment_tags_manager.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.pinder.app.SettingsActivity">
+    tools:context="com.pinder.app.Tags.TagsManagerFragment">
 
     <Button
         android:id="@+id/back"
