--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
         />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/profile48"
+        android:icon="@drawable/tags"
         android:title="Main"
         />
 
