--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10sp"
-            android:text="#all "
+            android:text="#all"
             android:textSize="25sp" />
 
         <TextView
@@ -72,9 +72,7 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scrollbars="vertical">
-
-            </androidx.recyclerview.widget.RecyclerView>
+                android:scrollbars="vertical"/>
         </androidx.core.widget.NestedScrollView>
     </LinearLayout>
 </LinearLayout>
