--- a/app/src/main/res/layout/activity_main_fragment_menager.xml
+++ b/app/src/main/res/layout/activity_main_fragment_menager.xml
@@ -3,18 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.pinder.app.MainFragmentMenager"
-    android:orientation="vertical"
     android:fillViewport="true"
- >
+    android:orientation="vertical"
+    tools:context="com.pinder.app.MainFragmentMenager">
 
     <LinearLayout
-        android:paddingTop="5sp"
-        android:paddingBottom="5sp"
         android:layout_width="match_parent"
         android:layout_height="50sp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="5sp"
+        android:paddingBottom="5sp">
 
         <ImageView
             android:id="@+id/settings"
@@ -57,75 +55,10 @@
             android:text="Profle" />
     </LinearLayout>
 
-<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--        android:id="@+id/navigation"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="50sp"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:menu="@menu/navigation"-->
-<!--        android:background="@android:color/holo_red_dark">-->
-       <!-- <LinearLayout
-            android:paddingTop="10sp"
-            android:paddingBottom="10sp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/settings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/settings"
-                android:text="Settings" />
-
-            <ImageView
-                android:id="@+id/tags"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/tags"
-                android:text="Tags" />
-
-            <ImageView
-                android:id="@+id/main"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/main"
-                android:text="Tags" />
-
-            <ImageView
-                android:id="@+id/matches"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/matches"
-                android:text="Matches" />
-
-            <ImageView
-                android:id="@+id/profile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/profile"
-                android:text="Profle" />
-        </LinearLayout>
--->
-<!--    </com.google.android.material.bottomnavigation.BottomNavigationView>-->
-
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
     </FrameLayout>
-
-
-    <!--      <fragment
-          android:id="@+id/profile_fragment"
-          android:name="com.pinder.app.ProfileFragment"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />-->
-
 </LinearLayout>
