--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -41,7 +41,6 @@
                     android:id="@+id/nameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:layout_weight="1"
                     android:textColor="@android:color/black"
                     android:textSize="30sp"
@@ -159,8 +158,8 @@
                 android:layout_marginLeft="100sp"
                 android:layout_marginRight="100sp"
                 android:background="@drawable/rounded_button"
-                android:visibility="invisible"
-                android:text="unmatch" />
+                android:text="unmatch"
+                android:visibility="invisible" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -175,8 +174,8 @@
                     android:layout_weight="1"
                     android:paddingLeft="50sp"
                     android:src="@drawable/dislike"
-                    android:visibility="invisible"
-                    android:text="DISLIKE" />
+                    android:text="DISLIKE"
+                    android:visibility="invisible" />
 
                 <ImageView
                     android:id="@+id/likeButton"
@@ -185,8 +184,8 @@
                     android:layout_weight="1"
                     android:paddingRight="50sp"
                     android:src="@drawable/like"
-                    android:visibility="invisible"
-                    android:text="LIKE" />
+                    android:text="LIKE"
+                    android:visibility="invisible" />
 
             </LinearLayout>
         </RelativeLayout>
