--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +23,7 @@
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
                 android:layout_height="500sp"
-                android:background="@drawable/profile_default"></androidx.viewpager.widget.ViewPager>
+                android:background="@drawable/profile_default" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -90,7 +89,6 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_marginBottom="20sp"
                 android:gravity="top"
                 android:hint="Description"
