--- a/app/src/main/res/layout/fragment_tags_manager.xml
+++ b/app/src/main/res/layout/fragment_tags_manager.xml
@@ -7,16 +7,13 @@
     android:orientation="vertical"
     tools:context="com.pinder.app.Tags.TagsManagerFragment">
 
-
-
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabTextColor="#000000">
-    </com.google.android.material.tabs.TabLayout>
+        app:tabTextColor="#000000" />
 
     <View
         android:layout_width="match_parent"
@@ -27,7 +24,6 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent">
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_height="fill_parent" />
 </LinearLayout>
 
