--- a/app/src/main/res/layout/fragment_tags.xml
+++ b/app/src/main/res/layout/fragment_tags.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pinder.app.Tags.TagsFragment">
+    tools:context="com.pinder.app.Tags.MainTags.TagsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
