--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="20sp"
     android:paddingRight="20sp"
     android:scrollbars="none"
-    tools:context="com.pinder.app.SettingsFragment">
+    tools:context="com.pinder.app.Settings.SettingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
